fix scrollbar

--- a/src/components/Content/content.module.css
+++ b/src/components/Content/content.module.css
@@ -1,5 +1,6 @@
 .content {
   background-color: #13157f;
+  position: relative;
 }
 .fontWhite {
   color: #fff;
@@ -44,7 +45,6 @@
 }
 
 .wrap_content {
-  width: 100%;
   padding-top: 100px;
   width: 1248px;
   padding-left: 235px;
@@ -62,6 +62,44 @@
 }
 
 .banner {
-  /* top: 300px !important;
-  z-index: 90; */
+  display: block;
+  margin-top: -100px;
+}
+
+@media (max-width: 1200px) {
+  .wrap_content {
+    padding-left: calc(10px + 10%);
+  }
+  .fontWhite,
+  .fontGreen {
+    font-size: calc(30px + 5vw);
+    line-height: calc(32px + 5vw);
+  }
+}
+@media (max-width: 992px) {
+  .description {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 375px) {
+  .wrap_content {
+    padding-left: 32px;
+    padding-right: 32px;
+    margin: 0 auto;
+  }
+  .fontWhite,
+  .fontGreen {
+    font-size: 42px;
+    line-height: 45px;
+  }
+  .line {
+    position: absolute;
+    left: 0;
+    margin-left: 0;
+    bottom: 50px;
+  }
+  .banner {
+    margin-top: 0;
+  }
 }
