--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -4,10 +4,15 @@
   position: sticky;
   top: 0;
   z-index: 100000;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
   height: 60px;
+  max-width: unset;
   width: 120px;
   min-height: auto;
   margin: 0;
@@ -103,55 +108,9 @@
 .font_icon_menu {
   font-size: 30px;
 }
-
-/* .dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropbtn {
-  color: #13157f;
-  font-weight: bold;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropdown_content {
+.btn_start_lg {
   display: none;
-  position: absolute;
-  background-color: #fff;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
-  z-index: 1;
 }
-
-.menu li:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown_content .dropdown_item {
-  color: black;
-  padding: 10px 4px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown_item:not(:last-child) {
-  border-bottom: 1px solid #00000020;
-}
-
-.dropdown-content .dropdown_item:hover {
-  background-color: #fff;
-  color: #13157f;
-}
-
-.dropdown:hover .dropdown_content {
-  display: block;
-} */
-
 @media (max-width: 1200px) {
   .btn_menu {
     display: block;
@@ -163,17 +122,18 @@
   .menu {
     position: absolute;
     width: 0;
-    height: 0;
-    right: -100px;
-    background: #1c1fd8f0;
-    top: -16px;
+    right: 0;
+    background: #13157f;
+    top: 80px;
+    margin-top: 0;
     overflow: hidden;
-    border-bottom-left-radius: 99999px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 0;
+    padding-top: 80px;
+    margin-left: 32px;
     z-index: 1;
     transition: all 0.5s ease-in-out;
+    height: 0;
   }
   .hidden {
     display: none;
@@ -181,33 +141,25 @@
   .header .showMenu {
     position: absolute;
     right: 0;
-    height: 100vh;
     width: 100%;
-
-    /* border-bottom-left-radius: 0; */
+    height: calc(100vh - 80px);
+  }
+  .btn_header {
+    margin-top: 40px;
+  }
+  .btn_start_xl {
+    display: none;
+  }
+  .btn_start_lg {
+    display: block;
+    position: absolute;
+    bottom: 18px;
   }
 }
-/* @media (max-width: 576px) {
-  .show_menu {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    background-color: #50f2ba;
-    margin: 0;
-    transition: 0.5s;
-    top: 80px;
-    width: 100vw;
-    height: 30vh;
-  }
-} */
 
 @media (max-width: 375px) {
-  .menu {
-    display: none;
-  }
-
-  .hidden {
-    display: none;
+  .btn_start_lg {
+    width: 100%;
+    padding: 0 18px;
   }
 }
